# v3ProyectoProgra3

./: CMakeLists.txt  DataLoader.cpp  DataLoader.h  Menu.cpp  Menu.h  Pelicula.cpp  Pelicula.h  README.md  README.txt  Trie.cpp  Trie.h  TrieNode.cpp  TrieNode.h  Utils.cpp  Utils.h  VerMasTarde.cpp  VerMasTarde.h  main.cpp
